<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr"
    tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="621dp"
                android:layout_margin="30dp"
                android:layout_marginStart="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_corners"
                    android:foregroundGravity="bottom"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="290dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="60dp" />

                            <ImageView
                                android:id="@+id/logasoLogin"
                                android:layout_width="match_parent"
                                android:layout_height="196dp"
                                android:contentDescription="Servicio Agil"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                app:srcCompat="@drawable/logo" />
                        </LinearLayout>

                    </FrameLayout>

                    <TextView
                        android:id="@+id/lbError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=" "
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/usuario"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:hint="@string/ingresa_tu_usuario"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:textAlignment="viewStart"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contrase_a"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/ingresa_tu_contrase_a"
                        android:inputType="textPassword"
                        android:textAlignment="viewStart"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/lbOlvido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/olvid_mi_contrase_a"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/HyperLinks"
                        android:textSize="18sp"
                        android:typeface="sans" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="34dp" />

                    <Button
                        android:id="@+id/btLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#CE0ED316"
                        android:text="@string/iniciar"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </FrameLayout>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>